# shazam

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: shazam_error_checking.cmake  shazam_install_files.cmake  shazam_which_path.cmake
include/: shazam.hpp.in  sugar.cmake
include/shazam/: memory.hpp  offset.hpp  position.hpp  position_math.hpp  predicate.hpp  segment.hpp  service_base.hpp  service_object.hpp  string.hpp  string_service.hpp  sugar.cmake  tagged_value.hpp
include/shazam/memory/: basic_allocator.hpp  block.hpp  null_allocator.hpp  null_allocator_service.hpp  sugar.cmake
include/shazam/predicate/: predicate.hpp  sugar.cmake
tests/: sugar.cmake  test_copy.cpp  test_index_position.cpp  test_memory.cpp  test_string_service.cpp
